tests/core/error/triples-3.rq
# Use unknown property
SELECT ?u { ?u rdf:value / nrl:asdfqwertyuiop 42 }
